# enterprise-web3

./: .dockerignore  Cargo.toml  Dockerfile  README.md  deploy-zh.md
.github/workflows/: images.yml
evm-exporter/: Cargo.toml
evm-exporter/migrations/: allowances.sql  balance.sql  block_info.sql  byte_code.sql  common.sql  issuance.sql  nonce.sql  pending_byte_code.sql  pending_state.sql  pending_transactions.sql  state.sql  transactions.sql
evm-exporter/src/: error.rs  exporter.rs  getter.rs  keys.rs  lib.rs  setter.rs  types.rs  utils.rs
postgres/: README.md  postgres-secret.yaml  postgres.yaml  role-binding.yaml  role.yaml
redis-versioned-kv/: Cargo.toml
redis-versioned-kv/lua/: versioned-kv.lua
redis-versioned-kv/src/: lib.rs
rocksdb-exporter/: Cargo.toml  Dockerfile  docker_rocksdb-exporter.sh  rocksdb-exporter-config.toml  run_rocksdb_exporter.sh
rocksdb-exporter/src/: config.rs  main.rs
rocksdb-exporter/src/evm_rocksdb_storage/: build_key.rs  evm_rocksdb.rs  mod.rs  parse_data.rs  storage.rs  storage_macro.rs  utils.rs
tests/: compose.yaml  migration.sh
tests/config/: rocksdb-exporter-config.toml  web3-service-config.toml
web3-service/: Cargo.toml  Dockerfile  web3-service-config.toml  web3-service-deployment.yaml
web3-service/src/: config.rs  main.rs
web3-service/src/ethvm/: mod.rs
web3-service/src/notify/: mod.rs  notifications.rs  subscriber_notify.rs
web3-service/src/rpc/: debug.rs  eth.rs  eth_filter.rs  eth_pubsub.rs  health.rs  mod.rs  net.rs  web3.rs
web3-service/src/rpc/debugapi/: debug.rs  event_listener.rs  mod.rs  types.rs
web3-service/src/rpc/debugapi/jsvm/: func.rs  mod.rs  params.rs
web3-service/src/utils/: mod.rs
web3-service/src/vm/: evm_tx.rs  mod.rs  precompile.rs  stack.rs
web3-service/src/vm/precompile/: anemoi.rs  blake2f.rs  bn128.rs  ecrecover.rs  identity.rs  mod.rs  modexp.rs  ripemd160_precompile.rs  sha256.rs
web3-service/src/vm/precompile/frc20/: data.rs  mod.rs  utils.rs
