[package]
name = "evm-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = "0.11.1"
thiserror = "1.0.34"

redis = { version = "0.21", default-features = false }
redis-versioned-kv = { path = "../redis-versioned-kv" }
hex = "0.4.3"
uint = "0.9.3"

ethereum = { version = "0.12.0", default-features = false, features = ["with-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"