[package]
name = "evm-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = "0.11"
thiserror = "1.0.34"
ethereum-types = { version = "0.13.1", default-features = false, features = ["serialize"] }
postgres = { version = "0.19", features = ["array-impls"], optional = true }
redis = { version = "0.25", default-features = false, optional = true }
redis-versioned-kv = { path = "../redis-versioned-kv", optional = true }
hex = "0.4.3"
uint = "0.9.3"
sha3 = "0.8"
fixed-hash = "0.8"
libsecp256k1 = { version = "0.5", features = ["static-context", "hmac"] }
ethereum = { version = "0.12.0", default-features = false, features = ["with-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["postgres"]
redis = ["dep:redis", "dep:redis-versioned-kv"]
redis-cluster = ["redis/cluster"]
postgres = ["dep:postgres"]
