[package]
name = "web3-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = "0.11.1"
ethereum-types = "0.13.1"
evm = { version = "0.35.0", default-features = false, features = ["with-serde"] }
ethereum = { version = "0.12.0", default-features = false, features = ["with-serde"] }
redis = { version = "0.21" }
redis-versioned-kv = { path = "../redis-versioned-kv" }
evm-exporter = { path = "../evm-exporter" }
tokio = { version = "1.21.0", features = ["full"] }
web3-rpc-core = { git = "https://github.com/FindoraNetwork/web3-rpc.git"}
jsonrpc-http-server = "18.0"
jsonrpc-ws-server = "18.0"
jsonrpc-core = "18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
log = "0.4.14"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored", "blocking"] }
ovr-eth-utils = { git = "https://github.com/Overealityio/ovr-eth-utils", rev = "ca83d6adb0396c06e05d1fd4c18a371de163ed58", features = ["with_common_precompiles"] }
once_cell = "1.10.0"
ovr-ruc  = {version = "1.0.8", features = ["cmd"] }